[gd_scene load_steps=3 format=2]

[ext_resource path="res://_projectiles/Projectile.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true
radius = 4.0

[node name="Projectile" type="Area2D"]
collision_layer = 0
collision_mask = 17
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="FizzleTimer" type="Timer" parent="."]

[node name="LifeTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_hit"]
[connection signal="timeout" from="FizzleTimer" to="." method="queue_free"]
[connection signal="timeout" from="LifeTimer" to="." method="fizzle"]
